Clarified order of training examples

--- a/Andrew_dev.ipynb
+++ b/Andrew_dev.ipynb
@@ -2,17 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# COGS 189 Final Project\n",
-    "devlopment by Andrew Washington"
+    "development notebook by Andrew Washington"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -24,9 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -35,31 +42,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(1, 4)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(40, 400, 10), (40, 400, 10), (40, 400, 10), (40, 400, 10)]\n"
+     ]
     }
    ],
    "source": [
-    "np.shape(data['training_data'])"
+    "# (# trials, # time points, # channels) x4, one each for right, up, left, right - in that order\n",
+    "print([np.shape(data['training_data'][0][i]) for i in range(4)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "# first training example of moving joystick right\n",
+    "right_1 = data['training_data'][0][0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -68,46 +91,20 @@
        "(400, 10)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.shape(data['training_data'][0][0][0])"
+    "np.shape(right_1)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "example_1 = data['training_data'][0][0][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "400"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(example_1)"
+    "## Example of one observation"
    ]
   },
   {
@@ -115,6 +112,8 @@
    "execution_count": 7,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": false
    },
    "outputs": [
@@ -220,7 +219,8 @@
     }
    ],
    "source": [
-    "for x in example_1.T:\n",
+    "# plot each channel in a new graph\n",
+    "for x in right_1.T:\n",
     "    plt.figure()\n",
     "    plt.plot(x)"
    ]
@@ -229,7 +229,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -238,166 +240,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[-297.02496777, -172.59669546,    8.8111787 , ..., -127.34400153,\n",
-       "         -133.92029563, -271.09608569],\n",
-       "        [-213.04541967, -166.2952056 ,  -80.16068552, ...,   -1.91573482,\n",
-       "         -102.73957718, -203.83821956],\n",
-       "        [-172.61576855, -177.62592864, -125.51977427, ...,   31.38495102,\n",
-       "          -87.04445618, -168.42546773],\n",
-       "        ..., \n",
-       "        [ 167.58373583,  140.47006176,  227.68186367, ...,  238.05687413,\n",
-       "          247.07507371,  198.16262261],\n",
-       "        [ 158.94256923,  143.49661646,  254.17180068, ...,  229.10071196,\n",
-       "          140.90201523,  255.70245097],\n",
-       "        [ 172.06556018,  160.7894051 ,  225.68904865, ...,  183.26635134,\n",
-       "           87.61569121,  226.68444936]],\n",
-       "\n",
-       "       [[  80.51935907,   21.98848015,   66.12954041, ...,   41.0871519 ,\n",
-       "           69.3544168 ,  158.75472383],\n",
-       "        [ 100.20039388,   72.79958406,  120.97717764, ...,   60.13975632,\n",
-       "           26.94694968,  189.95179999],\n",
-       "        [  74.0494067 ,   91.41015619,  147.25385658, ...,  100.43130747,\n",
-       "           51.33440284,  202.64268629],\n",
-       "        ..., \n",
-       "        [ -46.43651767,  -32.80595492,  -51.55334213, ...,  -14.07813599,\n",
-       "         -116.76638735,   22.70540024],\n",
-       "        [ -99.57708133, -113.03555189,  -29.15367661, ...,   66.47741403,\n",
-       "         -143.94775137,   76.2621664 ],\n",
-       "        [-173.46059812, -176.10773135,  -51.13708284, ...,  106.96821036,\n",
-       "         -153.73022894,   87.46178074]],\n",
-       "\n",
-       "       [[-134.54284715, -133.98453045, -137.98228262, ..., -118.05497252,\n",
-       "          -37.79156219,  -68.96057249],\n",
-       "        [-154.73451237,  -43.60297798,  -65.35273499, ...,  -94.98495108,\n",
-       "          -89.15449178,  -67.31918222],\n",
-       "        [-151.15445108,  -59.57479277,  -72.0210893 , ...,  -73.97194315,\n",
-       "         -107.64660625,  -93.81653595],\n",
-       "        ..., \n",
-       "        [ -18.61478922,  -29.11448099,  -93.14823193, ...,  -93.33378363,\n",
-       "         -177.22637187, -202.74057282],\n",
-       "        [-135.36735787,   26.39876027,  -44.80797416, ..., -141.10030707,\n",
-       "         -306.16876063, -174.09183068],\n",
-       "        [-166.62968874,   58.16288905,    8.38521448, ..., -140.5673373 ,\n",
-       "         -318.53579704,  -94.10472097]],\n",
-       "\n",
-       "       ..., \n",
-       "       [[  61.67915724,  -28.22777434, -105.103442  , ...,  101.74193933,\n",
-       "          165.71302949,  -16.08420096],\n",
-       "        [ 130.22837851,   69.12206492,   13.19690115, ...,   87.11414757,\n",
-       "          151.35505085,   19.39640139],\n",
-       "        [ 158.23895892,  134.74124127,   88.78217715, ...,  110.70241682,\n",
-       "          134.18600294,   47.81345139],\n",
-       "        ..., \n",
-       "        [ -27.05505065, -135.97432606,  -44.09737836, ..., -158.77249773,\n",
-       "           45.8893901 , -128.95145094],\n",
-       "        [  24.71899674,  -59.84839434,  -95.37545215, ..., -282.51270179,\n",
-       "           16.5833683 , -262.20890215],\n",
-       "        [  82.26139281,    7.28728339,  -60.85224801, ..., -293.4138634 ,\n",
-       "           35.35299016, -236.91058311]],\n",
-       "\n",
-       "       [[-320.70491675, -340.93718444, -310.97175051, ..., -427.30201655,\n",
-       "         -377.63065512, -208.22716775],\n",
-       "        [-389.67746849, -322.84991285, -206.70312365, ..., -322.87516786,\n",
-       "         -343.21815682, -241.77109647],\n",
-       "        [-383.08791403, -255.93175543, -119.30356151, ..., -223.3807267 ,\n",
-       "         -310.88525031, -188.47646033],\n",
-       "        ..., \n",
-       "        [  49.9290776 ,   42.41576495,   49.67724481, ...,  231.07678828,\n",
-       "          228.62614021,  139.10549906],\n",
-       "        [  25.01503816, -179.50310273,  -96.7439024 , ...,  172.53895864,\n",
-       "          151.7971226 ,   35.05706768],\n",
-       "        [  11.54658523, -209.246356  ,  -82.01799026, ...,   57.23166109,\n",
-       "           82.66082721,  -36.80126958]],\n",
-       "\n",
-       "       [[   1.03590536,  -80.37882264,   32.33066863, ...,  -17.21252544,\n",
-       "         -151.27713472,   69.91460492],\n",
-       "        [ -45.71717388,  -67.38002719,  -35.30614726, ...,  -33.30388312,\n",
-       "         -214.64639207,  132.5087642 ],\n",
-       "        [ -54.05449903,  -62.02281873,  -71.25269306, ...,  -18.50990211,\n",
-       "         -232.56513443,  103.15140642],\n",
-       "        ..., \n",
-       "        [ -79.13305428, -126.88988146,  -86.55639389, ...,  114.57425339,\n",
-       "          -52.83119069, -104.97165407],\n",
-       "        [ -56.89223596,  -74.29328919,  -54.30085449, ...,   30.94870803,\n",
-       "         -159.25226233,  -81.1362838 ],\n",
-       "        [ -77.69009876,  -65.6782547 ,  -93.19321015, ...,  -38.30954363,\n",
-       "         -235.17354532,  -48.92660326]]])"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data['training_data'][0][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -406,7 +251,9 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -591,7 +438,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -605,37 +454,6 @@
    "source": [
     "print(data.keys())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
