--- a/Andrew_dev.ipynb
+++ b/Andrew_dev.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -440,7 +440,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -459,51 +461,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Preprocessing"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Example"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -515,6 +498,8 @@
    "execution_count": 11,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": false
    },
    "outputs": [
@@ -647,23 +632,31 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "These look fairly reasonable. The edge artifacts aren't good, but they're nearly negligible for the ranges we're dealing with."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Actual Preprocessing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": false
    },
    "outputs": [
@@ -693,9 +686,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -704,7 +699,7 @@
        "(80, 30)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,30 +710,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[ 30120.9675635 ,  15529.65213103,  21681.67299238, ...,\n",
-       "         29879.04775092,  32977.07557986,  32287.66416746],\n",
+       "         29289.46447721,  31923.35064073,  31817.48488101],\n",
        "       [ 32673.02212003,  24995.07328161,  28968.33405366, ...,\n",
-       "         37506.06023314,  36387.32059533,  30594.67857702],\n",
+       "         36063.30477728,  35186.11987588,  29430.90804203],\n",
        "       [ 31566.52319145,  35342.41589252,  32219.44311377, ...,\n",
-       "         34201.12972452,  39787.46770214,  34283.71024357],\n",
+       "         33061.65489326,  39034.31925598,  32463.4065001 ],\n",
        "       ..., \n",
        "       [ 34511.10419434,  31429.9864086 ,  35102.56077153, ...,\n",
-       "         39620.65965007,  41386.51989784,  33053.94624429],\n",
+       "         38134.6132853 ,  40701.69034819,  31365.58175752],\n",
        "       [ 15826.69824012,  17675.72152756,  28156.76823181, ...,\n",
-       "         40434.1336912 ,  36949.78636614,  37590.76262991],\n",
+       "         39620.96809082,  35209.05166899,  36045.93020638],\n",
        "       [ 20519.60731572,  21455.67992777,  24962.60118305, ...,\n",
-       "         41647.6550927 ,  33898.11737167,  41383.38009021]])"
+       "         40209.97375306,  33037.30659556,  40197.46768628]])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,9 +756,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [],
@@ -772,30 +771,37 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Machine Learning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "from sklearn.cross_validation import train_test_split\n",
-    "from sklearn import svm, ensemble\n",
+    "from sklearn import svm, ensemble, discriminant_analysis\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.model_selection import cross_val_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -804,17 +810,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training: 34.0 left examples out of 68 total examples\n",
-      "Testing: 6.0 left examples out of 12 total examples\n"
+      "Training: 35.0 left examples out of 68 total examples\n",
+      "Testing: 5.0 left examples out of 12 total examples\n"
      ]
     }
    ],
@@ -825,7 +833,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Support Vector Machine: Linear"
    ]
@@ -834,7 +845,9 @@
    "cell_type": "code",
    "execution_count": 132,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -860,7 +873,9 @@
    "cell_type": "code",
    "execution_count": 133,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -881,7 +896,9 @@
    "cell_type": "code",
    "execution_count": 136,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -990,7 +1007,9 @@
    "cell_type": "code",
    "execution_count": 139,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1035,14 +1054,129 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "This is strange..."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "### Linear Discriminant Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearDiscriminantAnalysis(n_components=None, priors=None, shrinkage=None,\n",
+       "              solver='svd', store_covariance=False, tol=0.0001)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lda = discriminant_analysis.LinearDiscriminantAnalysis()\n",
+    "lda.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train accuracy: 0.882352941176\n",
+      "Test accuracy:  0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Train accuracy: ' + str(accuracy_score(y_train, lda.predict(X_train))))\n",
+    "print('Test accuracy:  ' + str(accuracy_score(y_test, lda.predict(X_test))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training: 35.0 examples predicted left and 35.0 examples were actually left\n",
+      "Testing: 3.0 examples predicted left and 5.0 examples were actually left\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Training: {p} examples predicted left and {a} examples were actually left'.format(\n",
+    "    p=np.sum(lda.predict(X_train)), a=np.sum(y_train)))\n",
+    "print('Testing: {p} examples predicted left and {a} examples were actually left'.format(\n",
+    "    p=np.sum(lda.predict(X_test)), a=np.sum(y_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.64285714,  0.64285714,  0.42857143,  0.5       ,  0.41666667,\n",
+       "        0.5       ])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_val_score(lda, power, labels, cv=6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Random Forest"
    ]
@@ -1052,6 +1186,8 @@
    "execution_count": 141,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -1077,7 +1213,9 @@
    "cell_type": "code",
    "execution_count": 142,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1098,7 +1236,9 @@
    "cell_type": "code",
    "execution_count": 143,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1121,7 +1261,9 @@
    "cell_type": "code",
    "execution_count": 144,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1142,7 +1284,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Further Analysis"
    ]
@@ -1151,7 +1296,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1172,7 +1319,9 @@
    "cell_type": "code",
    "execution_count": 159,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1199,7 +1348,9 @@
    "cell_type": "code",
    "execution_count": 165,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1210,7 +1361,9 @@
    "cell_type": "code",
    "execution_count": 167,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1237,7 +1390,9 @@
    "cell_type": "code",
    "execution_count": 180,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1261,7 +1416,9 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1283,7 +1440,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
