debugging linear algebra issues

--- a/Erin_dev.ipynb
+++ b/Erin_dev.ipynb
@@ -2,32 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import scipy.io as sio"
+    "import scipy.io as spo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def convertData(inFile):\n",
-    "    matFile = sio.loadmat(inFile)\n",
+    "    matFile = spo.loadmat(inFile)\n",
     "    return matFile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -49,7 +49,7 @@
        "dict"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -68,10 +68,10 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['Info', '__globals__', 'training_data', 'test_data', '__header__', '__version__'])"
+       "dict_keys(['__header__', '__version__', 'Info', 'test_data', '__globals__', 'training_data'])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -90,23 +90,116 @@
     {
      "data": {
       "text/plain": [
-       "(1, 4)"
+       "(40, 400, 10)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.shape(data['training_data'])"
+    "np.shape(data['training_data'][0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def CSP(rawFile):\n",
+    "    cspData = None\n",
+    "    leftCovMatrix, rightCovMatrix = covMatrices(rawFile)   \n",
+    "    compMatrix = leftCovMatrix + rightCovMatrix\n",
+    "    evals, evect = np.linalg.eig(compMatrix)\n",
+    "    \n",
+    "    evalsMatrix = np.reshape(evals, (1, 400))\n",
+    "    \n",
+    "\n",
+    "    identityMatrix = np.eye(400, dtype=int)\n",
+    "\n",
+    "    diagEvals = np.dot(evalsMatrix, identityMatrix)\n",
+    "    \n",
+    "    invDiagEvals = np.linalg.inv(diagEvals)\n",
+    "    \n",
+    "    perm = np.sqrt(invDiagEvals) * evect.T\n",
+    "    return cspData\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def covMatrices(inFile):\n",
+    "    numTrials = 40\n",
+    "    rCovMatrix = 0\n",
+    "    lCovMatrix = 0\n",
+    "\n",
+    "    matFile = spo.loadmat(inFile)\n",
+    "    \n",
+    "    # Get the matrix that contains the data for desired trial\n",
+    "    rightTrialData = matFile['training_data'][0][0]\n",
+    "    leftTrialData = matFile['training_data'][0][2]\n",
+    "    \n",
+    "#    print(rightTrialData)\n",
+    "    # caluclate mean cov matrix for right trials\n",
+    "    for iRTrial in rightTrialData:\n",
+    "        iRMatrix = np.dot(iRTrial, iRTrial.T)\n",
+    "        #print(iRMatrix)\n",
+    "        iRTrace = np.trace(iRTrial)\n",
+    "\n",
+    "        rCovMatrix += (iRMatrix / iRTrace)\n",
+    "\n",
+    "    aveRCovMatrix = np.matrix(rCovMatrix / numTrials)\n",
+    "    # calculate mean cov matrix for left trials\n",
+    "    for iLTrial in leftTrialData:\n",
+    "        iLMatrix = np.dot(iLTrial, iLTrial.T)\n",
+    "        iLTrace = np.trace(iLTrial)\n",
+    "\n",
+    "        lCovMatrix += (iLMatrix / iLTrace)\n",
+    "    aveLCovMatrix = np.matrix(lCovMatrix / numTrials)\n",
+    "\n",
+    "    return aveLCovMatrix, aveRCovMatrix "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "LinAlgError",
+     "evalue": "Last 2 dimensions of the array must be square",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mLinAlgError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-143-ce89aa54bfb5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mCSP\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'S1.mat'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-141-54ad76729fe8>\u001b[0m in \u001b[0;36mCSP\u001b[0;34m(rawFile)\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mdiagEvals\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mevalsMatrix\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0midentityMatrix\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0minvDiagEvals\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdiagEvals\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0mperm\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minvDiagEvals\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mevect\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\erinc\\Anaconda3\\lib\\site-packages\\numpy\\linalg\\linalg.py\u001b[0m in \u001b[0;36minv\u001b[0;34m(a)\u001b[0m\n\u001b[1;32m    515\u001b[0m     \u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwrap\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_makearray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    516\u001b[0m     \u001b[0m_assertRankAtLeast2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m--> 517\u001b[0;31m     \u001b[0m_assertNdSquareness\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    518\u001b[0m     \u001b[0mt\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mresult_t\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_commonType\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    519\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\erinc\\Anaconda3\\lib\\site-packages\\numpy\\linalg\\linalg.py\u001b[0m in \u001b[0;36m_assertNdSquareness\u001b[0;34m(*arrays)\u001b[0m\n\u001b[1;32m    210\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0ma\u001b[0m \u001b[1;32min\u001b[0m \u001b[0marrays\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    211\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m--> 212\u001b[0;31m             \u001b[1;32mraise\u001b[0m \u001b[0mLinAlgError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Last 2 dimensions of the array must be square'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    213\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    214\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0m_assertFinite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0marrays\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mLinAlgError\u001b[0m: Last 2 dimensions of the array must be square"
+     ]
+    }
+   ],
+   "source": [
+    "CSP('S1.mat')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": []
